# vc2-emulator

./: Cargo.toml  README.md
.git-hooks/: commit-msg  cp.sh
assembler/: Cargo.toml  test.asm
assembler/src/: assembler.rs  error.rs  instructions.rs  lib.rs  main.rs  parser.rs
image-asm/: Cargo.toml  README.md
image-asm/src/: main.rs
inspector/: Cargo.toml  README.md  TODO.md
inspector/src/: help.txt  main.rs  peripherals.rs  utils.rs
number-info/: Cargo.toml
number-info/src/: main.rs
programs/: add.asm  constants.asm  double_buffer_render.asm  draw.asm  dvd.asm  for_loop.asm  gradient.asm  infinite_add.asm  paint.asm  test.asm  video.asm
programs/blackjack/: blackjack.asm  link-images  run
programs/blackjack/images/: palette.ase
programs/image_asm/: .gitignore  link-images  render.asm  run
src/: arch.rs  lib.rs  parser.rs  vm.rs
src/parser/: mod.rs
vm/: Cargo.toml  LICENSE  TODO.md
vm/src/: arch.rs  lib.rs  named_instruction.rs  vm.rs
