[package]
name = "vc2-assembler"
version = "0.1.24"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gumdrop = "0.8.1"
itertools = "0.12.0"
log = "0.4.20"
simple_logger = "4.2.0"

[dev-dependencies]
pretty_assertions = "1.4.0"

